<resources>
    <string name="app_name">otoh.io</string>
    <string name="name_with_tagling">otoh.io Take Control of Your Privacy</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up for an account</string>
    <string name="recover_identity">Recover an existing identity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="initializing">Initializing</string>
    <string name="title_activity_identities">IdentitiesActivity</string>
    <string name="your_identities">Your Identities</string>
    <string name="setup_identity">Set up a new identity</string>
    <string name="username">Username</string>
    <string name="check_availability">Check availability</string>
    <string name="real_name">Your real name</string>
    <string name="nick_name">Pick a nickname</string>
    <string name="tos">Terms of Service\nPLEASE READ THE FOLLOWING TERMS AND POLICIES CAREFULLY. WHEN YOU USE OUR WEBSITE YOU ACKNOWLEDGE THAT YOU HAVE READ, UNDERSTOOD, AND AGREE TO BE BOUND BY THESE TERMS AND POLICIES.\n\nCATOCTIN SYSTEMS LLC TERMS OF SERVICE\n\nThese Terms of Service are hereby effective on August 01, 2014 and will apply to the website that you are visiting, otoh.io (the “Website”), which is owned by Catoctin Systems LLC (the “Company”). \n\nIllegal or Abusive Usage is Strictly Prohibited: You must not abuse, harass, threaten, impersonate or intimidate other users of our Website. You may not use the Company’s Website for any illegal or unauthorized purpose. International users agree to comply with all local laws regarding online conduct and acceptable content. Should you be found to have engaged in illegal or abusive usage of our Website, Company will suspend your account or usage as applicable. \n\nElectronic Communication: When you visit our Website or send us emails, you are communicating with us electronically. You consent to receive communications from us electronically. We will communicate with you by email or by posting notices on the Website.  You agree that all agreements, notices, disclosures and other communications that we provide to you electronically satisfy any legal requirement that such communications be in writing. \n\nCopyright: All content included on this site, such as text, graphics, logos, button icons, images, audio clips, digital downloads, data compilations, and software, is the property of Company protected by United States and international copyright laws. The compilation of all content on this site is the exclusive property of the Company and protected by U.S. and international copyright laws. All software used on this site is the property of Company or its software suppliers and protected by United States and international copyright laws.\n\nTrademarks: Catoctin Systems LLC or otoh.io and other Company graphics, logos, page headers, button icons, scripts, and service names are trademarks, registered trademarks or trade dress of Company in the U.S. and/or other countries. Company’s trademarks and trade dress may not be used in connection with any product or service that is not Company’s, in any manner that is likely to cause confusion among customers or in any manner that disparages or discredits Company. All other trademarks not owned by Company that appear on this site are the property of their respective owners, who may or may not be affiliated with, connected to, or sponsored by Company. \n\nYour Account: If you use this site, you are responsible for maintaining the confidentiality of your account and password and for restricting access to your computer, and you agree to accept responsibility for all activities that occur under your account or password. Company reserves the right to refuse service, terminate accounts, remove or edit content, or cancel orders in their sole discretion.\n\nDisclaimer of Warranties and Limitation of Liability:\n\nTHIS SITE AND ALL INFORMATION, CONTENT, MATERIALS, PRODUCTS (INCLUDING SOFTWARE) AND SERVICES INCLUDED ON OR OTHERWISE MADE AVAILABLE TO YOU THROUGH THIS SITE ARE PROVIDED BY COMPANY ON AN “AS IS” AND “AS AVAILABLE” BASIS, UNLESS OTHERWISE SPECIFIED IN WRITING. COMPANY MAKES NO REPRESENTATIONS OR WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED, AS TO THE OPERATION OF THIS SITE OR THE INFORMATION, CONTENT, MATERIALS, PRODUCTS (INCLUDING SOFTWARE) OR SERVICES INCLUDED ON OR OTHERWISE MADE AVAILABLE TO YOU THROUGH THIS SITE, UNLESS OTHERWISE SPECIFIED IN WRITING. YOU EXPRESSLY AGREE THAT YOUR USE OF THIS SITE IS AT YOUR SOLE RISK. \n\nTO THE FULL EXTENT PERMISSIBLE BY APPLICABLE LAW, COMPANY DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. COMPANY DOES NOT WARRANT THAT THIS SITE; INFORMATION, CONTENT, MATERIALS, PRODUCTS (INCLUDING SOFTWARE) OR SERVICES INCLUDED ON OR OTHERWISE MADE AVAILABLE TO YOU THROUGH THIS SITE; THEIR SERVERS; OR E-MAIL SENT FROM COMPANY ARE FREE OF VIRUSES OR OTHER HARMFUL COMPONENTS. COMPANY WILL NOT BE LIABLE FOR ANY DAMAGES OF ANY KIND ARISING FROM THE USE OF THIS SITE OR FROM ANY INFORMATION, CONTENT, MATERIALS, PRODUCTS (INCLUDING SOFTWARE) OR SERVICES INCLUDED ON OR OTHERWISE MADE AVAILABLE TO YOU THROUGH THIS SITE, INCLUDING, BUT NOT LIMITED TO DIRECT, INDIRECT, INCIDENTAL, PUNITIVE, AND CONSEQUENTIAL DAMAGES, UNLESS OTHERWISE SPECIFIED IN WRITING. \n\nCERTAIN STATE LAWS DO NOT ALLOW LIMITATIONS ON IMPLIED WARRANTIES OR THE EXCLUSION OR LIMITATION OF CERTAIN DAMAGES. IF THESE LAWS APPLY TO YOU, SOME OR ALL OF THE ABOVE DISCLAIMERS, EXCLUSIONS, OR LIMITATIONS MAY NOT APPLY TO YOU, AND YOU MIGHT HAVE ADDITIONAL RIGHTS. \n\nApplicable Law: By visiting our website, you agree that the laws of the State of MD, without regard to principles of conflict of laws, will govern these Terms of Service and any dispute of any sort that might arise between you and Company. \n\nALL INFORMATION, INSTRUCTIONS, TIPS, COMMENTS, AND FORMS ARE PROVIDED "AS IS" WITHOUT ANY EXPRESS OR IMPLIED WARRANTY, INCLUDING AS TO LEGAL EFFECT OR COMPLETENESS. They are for guidance and should be modified by you or your attorney to meet your specific needs and the laws of your state. Use at your own risk. Docstoc, its employees or contractors who wrote or modified any form, instructions, tips, comments, and decision tree alternatives and choices, are NOT providing legal or any other kind of advice, are not creating or entering into an Attorney-Client relationship, and were most likely NOT prepared or reviewed by an attorney licensed to practice law in your state. Docstoc is unable to and does not provide legal advice. Please note that laws change and are regularly amended, therefore, the provisions, and names and section numbers of statutes within this document, if any, may not be 100% correct as they may be partially or wholly out of date and some relevant ones may have been omitted or misinterpreted. The information and forms are not a substitute for the advice of your own attorney. You may wish to consult with your own attorney licensed to practice law in your state.\n\nThis document is not approved, endorsed by, or affiliated with any State, or governmental or licensing entity.\n\nNote: You should have carefully read and considered the instructions, tips, comments, and decision tree alternatives and choices. If you did not you should go back and complete the process again. You must review the completed document to make sure that it meets your specific circumstances and requirements, and the particular laws of your state. Docstoc does not review your completed document, including for consistency, spelling errors, or any reason at all. You (or your attorney) may want to make additional modifications to meet your specific needs and the laws of your state.\n\n◊ Where within this document you see this symbol: ◊or an instruction states "Insert any number you ," or something similar, or there is a blank for the user to complete, please note that although choose◊ Docstoc believes the information or number may be any that the user chooses, and that there is no law governing what the information or number should be, you might want to verify this, including by consulting with your own attorney licensed to practice law in your state. And even if one party has more negotiating leverage than another you might want to be reasonable.\n\nINFORMATION AND FORMS ARE PROVIDED "AS IS" WITHOUT ANY EXPRESS OR IMPLIED WARRANTY OF ANY KIND INCLUDING WARRANTIES OF MERCHANTABILITY, NONINFRINGEMENT OF INTELLECTUAL PROPERTY, OR FITNESS FOR ANY PARTICULAR PURPOSE. IN NO EVENT SHALL DOCSTOC, INC., OR ITS AGENTS, OFFICERS, ATTORNEYS, ETC., BE LIABLE FOR ANY DAMAGES WHATSOEVER (INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF PROFITS, BUSINESS INTERRUPTION, LOSS OF INFORMATION) ARISING OUT OF THE USE OF OR INABILITY TO USE THE MATERIALS, EVEN IF DOCSTOC HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.\n</string>
    <string name="agree_and_create">Agree and Create Identity</string>
    <string name="email">Email Address</string>
    <string name="preference_file_key">io.otoh.otohio.PREFERENCE_FILE_KEY</string>
    <string name="username_not_available">Username not available</string>
    <string name="username_available">Username looks good!</string>
    <string name="pick_a_username">Pick a valid username</string>
    <string name="access_key">access_key</string>
    <string name="unexpected_response">API Error: unexpected response</string>
    <string name="user_id">user_id</string>
    <string name="display_certs">Your Certificates</string>
    <string name="certs_explanation">These are your new certificates.\n\nYour Digital Signature (ds) certificate is what you will use to sign things like emails to prove that you sent them.\n\nYour Key Encipherment (ke) certificate is what you\'ll use to encrypt things so they stay private.\n\nPress the INSTALL CERTIFICATES button to install your new certificates.</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="strong_password">Choose a strong password.  Tip: pick the first letter of every word in a sentence, including capitalization and punctuation.\n\nExample sentence: Wow, this otoh.io app is really great; I\'m going to tell all my friends!\n\nExample password: W,toairg;Igttamf!</string>
    <string name="pgp_fingerprint_is">Your PGP fingerprint is:</string>
    <string name="cert_location">Your certs live here:</string>
    <string name="identity">Identity</string>
    <string name="reputation">Reputation</string>
    <string name="ds_fingerprint">Digital Signature Fingerprint</string>
    <string name="ke_fingerprint">Key Encipherment Fingerprint</string>
    <string name="pgp_fingerprint">PGP Fingerprint</string>
    <string name="email_address">Email Address</string>
    <string name="copy_ds_pub">Copy DS Pub</string>
    <string name="restore_ds_cert">Restore DS Cert</string>
    <string name="copy_ke_pub">Copy KE Pub</string>
    <string name="restore_ke_cert">Restore KE Cert</string>
    <string name="copy_pgp_pub">Copy PGP Pub</string>
    <string name="restore_pgp_kr">Restore PGP KR</string>
    <string name="view_reputation_graph">View Reputation Graph</string>
    <string name="backup_private_keys">Backup Private Keys</string>
    <string name="display_qr_code">Display QR Code</string>
</resources>