<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.otoh.otohio.IdentityActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/identity_title" />
        </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reputation"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_reputation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ds_fingerprint"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_ds_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ke_fingerprint"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_ke_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pgp_fingerprint"
            android:layout_gravity="end"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/identity_pgp_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/identities_button_copy_ds_pub"
            android:onClick="copyDsPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_ds_pub" />
        <Button
            android:id="@+id/identities_button_restore_ds_cert"
            android:onClick="restoreDsCert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_ds_cert"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/identities_button_copy_ke_pub"
            android:onClick="copyKePub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_ke_pub" />
        <Button
            android:id="@+id/identities_button_restore_ke_cert"
            android:onClick="restoreKeCert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_ke_cert"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/identities_button_copy_pgp_pub"
            android:onClick="copyPgpPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_pgp_pub" />
        <Button
            android:id="@+id/identities_button_restore_pgp_kr"
            android:onClick="restorePgpKr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_pgp_kr"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/identities_button_view_reputation_graph"
            android:onClick="viewReputationGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_reputation_graph"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/identities_button_backup_private_keys"
            android:onClick="backupPrivateKeys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_private_keys"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/identities_button_display_qr_code"
            android:onClick="displayQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_qr_code"
            android:layout_weight="1" />

    </TableRow>


</TableLayout>
